# sts-gateway

./: .gitignore  Cargo.toml  README.md
src/: aggregator.rs  definitions.rs  main.rs  storage.rs  transport.rs  utilities.rs
src/channels/: mod.rs
src/channels/modbus/: mod.rs  rtu.rs  tcp.rs
