[package]
name = "sts-gateway"
version = "0.0.1"
edition = "2021"
authors = ["Samuel Ružek<samuel@ruzek.sk>"]
license = "MPL 2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-modbus = { version ="^0.5" , features = ["sync"] }
tokio-serial = "^5.4"
#tokio = { version = "^1.17", features = ["macros", "rt-multi-thread"]}
serde = { version = "*", features = ["derive"]}
serde_json = "*" 
serde_yaml = "*"
job_scheduler = "^1.0"
rusqlite = {version = "^0.27", features = ["bundled", "backup"]}
log4rs = "^1"
log = "*"
zstd = "*"
chrono  =  { version = "^0.4", features = ["serde"] }
chrono-tz = { version = "^0.6", features = ["serde"] }
sha2 = "^0.10"
hex-literal = "*"
hex = "^0.4"
safe-transmute = "0.11.2"
bytemuck = "^1.9"
bytebuffer = "^0.2"
rumqttc = "^0.11"
clap = { varsion = "^3.1", features = ["derive"] }